guna-1 - 1st chages

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,18 @@
-<p class="text-green-700">header works!</p>
+<div class="sticky top-0 bg-blue-500 text-white">
+  <div class="container mx-auto py-4 flex justify-between">
+    <div class="flex-1">
+      <ul class="flex justify-center">
+        <li class="px-4">Item 1</li>
+        <li class="px-4">Item 2</li>
+      </ul>
+    </div>
+    <div class="flex-1">
+      <ul class="flex justify-center">
+        <li class="px-4">Item 1</li>
+        <li class="px-4">Item 2</li>
+        <li class="px-4">Item 3</li>
+      </ul>
+    </div>
+  </div>
+</div>
+
