--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,18 +1,18 @@
-<div class="sticky top-0 bg-blue-500 text-white">
-  <div class="container mx-auto py-4 flex justify-between">
+<div class="bg-blue-500 text-white">
+  <div class="container mx-auto p-[6px] grid grid-cols-1 sm:grid-cols-2 ">
     <div class="flex-1">
-      <ul class="flex justify-center">
-        <li class="px-4">Item 1</li>
+      <ul class="flex justify-start divide-x top-nav">
+        <li class="px-4"><a href="https://www.dogsnshows.com/general/contact_us" class="text-white">Support</a></li>
         <li class="px-4">Item 2</li>
       </ul>
     </div>
     <div class="flex-1">
-      <ul class="flex justify-center">
+      <ul class="flex justify-end  divide-x top-nav ">
         <li class="px-4">Item 1</li>
         <li class="px-4">Item 2</li>
         <li class="px-4">Item 3</li>
       </ul>
     </div>
   </div>
-</div>
+  </div>
 
