--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,16 @@
 <app-header></app-header>
+<div class="w-full bg-white">
+    <div class="mx-auto">
+        <div class="flex">
+    <div class="w-64">
+    <app-sidebar></app-sidebar>
+</div>
+<div class="w-9/12">
+    <app-main-sec></app-main-sec>
+</div>
+</div>
+</div>
+</div>
+
 <app-footer></app-footer>
 <router-outlet />
