--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<div class="bg-blue-400 text-white w-full" style="border: 1px solid white">
+    <div class="container mx-auto p-[6px] grid grid-cols-1 sm:grid-cols-2 ">
+      <div class="pl-[8px]">Footer works</div>
+    </div>
+    </div>
