--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,18 +1,39 @@
-<div class="bg-blue-500 text-white">
+<div  class="bg-blue-400 text-white">
   <div class="container mx-auto p-[6px] grid grid-cols-1 sm:grid-cols-2 ">
-    <div class="flex-1">
+    <div class="flex-1 p-[4px]">
       <ul class="flex justify-start divide-x top-nav">
         <li class="px-4"><a href="https://www.dogsnshows.com/general/contact_us" class="text-white">Support</a></li>
-        <li class="px-4">Item 2</li>
+        <li class="px-4"><a class="bg-slate-800 p-[3px] px-[10px]  pb-[7px] rounded-md " target="_blank" href="https://www.dogsnshows.com/app_images/USER_MANUAL.pdf" >Download User Manual</a></li>
       </ul>
     </div>
-    <div class="flex-1">
+    <div class="flex-1 p-[4px]">
       <ul class="flex justify-end  divide-x top-nav ">
-        <li class="px-4">Item 1</li>
-        <li class="px-4">Item 2</li>
-        <li class="px-4">Item 3</li>
+        <li class="px-4">
+					 <a href="#"><i class="fa fa-phone top-menu-i"></i>9629012999</a>
+					</li>
+          
+        <li class="px-4"> <a href="#"><i class="fa fa-sign-in top-menu-i"></i>Sign In</a></li>
+        <li class="px-4"><a href="#"><i class="fa fa-user-plus top-menu-i"></i>Sign Up</a></li>
       </ul>
     </div>
   </div>
   </div>
+
+  <div class="sticky top-0 bg-white bottom-header">
+    <div class="container w-full mx-auto p-[6px] grid grid-cols-1 sm:grid-cols-2 ">
+      <div class="flex-1 p-[4px] w-48">
+      <img src="./assets/images/logo.png" class="w-full ml-3">
+      </div>
+      <div class="flex-1 p-[12px]">
+        <ul class="flex justify-end top-nav">
+          <a class="bottom-nav-li" href="#"><li class="header-nav-li">Home</li></a>
+            <a href="#" class="bottom-nav-li"><li class="header-nav-li">Results</li></a>
+            <a href="#" class="bottom-nav-li"><li class="header-nav-li">Show Calender</li></a>
+            <a href="#" class="bottom-nav-li"><li class="header-nav-li">Litter Ads</li></a>
+            <a href="#" class="bottom-nav-li"><li class="header-nav-li">Contact Us</li></a>
+
+        </ul>
+      </div>
+    </div>
+    </div>
 
